# TenderAIbot

tender_bot/: pyproject.toml
tender_bot/tender_bot/scripts/: bot.py
